Final version of test task
